tests/NormalTests/paczka1/fuzzy1/96082869.err
Error in line 2: ATVhESsddc A347 72,6
Error in line 18: BJHaj A447 34,33
Error in line 32: Ky7s1uygcgp A532 -3,9
Error in line 25: Ky7s1uygcgp A532 34,8
